disable code overflow and remove code line numbers

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -59,8 +59,8 @@ format:
     # code:
     code-fold: show
     code-summary: "Show the code"
-    code-overflow: wrap
-    code-line-numbers: true
+    code-overflow: scroll
+    code-line-numbers: false
     code-copy: true
     code-link: false
     code-annotations: true
